--- a/dom基础/css/Dom1-11.css
+++ b/dom基础/css/Dom1-11.css
@@ -6,6 +6,8 @@
  * @version $Id$
  */
 /* reset start */
+
+
 body,ul,li,p,h2,button,input{
 	margin: 0;
 	padding: 0;
@@ -345,6 +347,9 @@ button{
 	padding-top: 9px;
 	padding-right: 20px;
 }
+.emailList .list li.bg{
+	background-color: #f2f6f9;
+}
 .emailList .list li .text span:nth-of-type(1){
 	color: #6f6f6f;
 	font-size: 14px;
@@ -361,5 +366,20 @@ button{
 	font-size: 14px;
 	line-height: 22px;
 	color: #a6a6a6;
+}
+
+.tanc{
+	background-color: #48494a;
+	color: white;
+	font-size: 12px;
+	width: 95px;
+	height: 24px;
+	line-height: 24px;
+	text-align: center;
+	border-radius: 6px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
 }
 /* email end */
